2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 

	* ProjectOptionPanel.cs, ChangeLogData.cs, ProjectOptionPanelWidget.cs,
	  ChangeLogAddInOptionsPanel.cs, ChangeLogAddIn.cs, AddLogEntryDialog.cs,
	  ChangeLogAddIn.addin.xml, ChangeLogAddIn.mdp, gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.ChangeLogAddIn.AddLogEntryDialog.cs,
	  gtk-gui/gui.stetic, ChangeLogAddInOptionPanelWidget.cs, Makefile.am,
	  ChangeLogService.cs, CommitDialogExtensionWidget.cs: Allow updating
	  multiple changelog files at the same time. Updated licenses. Based on a
	  patch by Jacob Ilsø Christensen.

2007-07-03  Mike Krüger <mkrueger@novell.com> 

	* ChangeLogAddIn.cs: Changed a bit because of the removal of custom
	  collections in the Ide project.

2007-06-22  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* ChangeLogAddIn.mdp: Included ChangeLog file.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.mdp, Makefile.am: Reference shared assemblies from the
	  correct location.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml, ChangeLogAddIn.mdp,
	  gtk-gui/MonoDevelop.ChangeLogAddIn.AddLogEntryDialog.cs,
	  gtk-gui/gui.stetic, Makefile.am: Migration to Mono.Addins.

2007-03-02  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml, ChangeLogAddIn.cs: Simplified a little bit the
	  ChangeLogAddin. Just one command "Insert ChageLog Entry", an header is
	  automatically added if missing or if the top-most header is different
	  from the one we're about to add. The command can be issued from anywhere
	  and the add-in looks for the right ChangeLog file and even creates one
	  if necessary. Patch by Federico Di Gregorio.

	* AddLogEntryDialog.cs, gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.ChangeLogAddIn.AddLogEntryDialog.cs,
	  CommitDialogExtensionWidget.cs: Use new the partial class model.
	* ChangeLogAddIn.mdp: Update.
	* ChangeLogAddInOptionsPanel.cs,